refactor code, convert raw SQL to Sequelize
